Fixed the gap inbetween contact and wave

--- a/src/cssmodules/contact.module.scss
+++ b/src/cssmodules/contact.module.scss
@@ -102,7 +102,7 @@
 
 @media only screen and (max-width: 1210px) and (min-width:235px) {
    .contactwrapper{
-    padding: 2rem 0rem 3rem 0rem;
+    padding: 2rem 0rem 0rem 0rem;
 
    }
     .contactwrapper{
